* Configured Grunt 'server' task so you can debug locally. * Fixed some broken CSS links
Former-commit-id: bf7aaa14a3c5fd89d5d3e21c65803aa534e61eec

--- a/dcc-submission-ui/dictionary/app/styles/dictionary.css
+++ b/dcc-submission-ui/dictionary/app/styles/dictionary.css
@@ -1,3 +1,9 @@
+/*** header ***/
+.navbar-brand > img {
+  display: inline-block;
+}
+
+
 .data-type-list {
   padding-left:1em;
   padding-right:1em;
@@ -86,7 +92,7 @@ a {
   border:none;
 }
 .jsoneditor .menu button{
-  background: url(bower_components/dist/img/jsoneditor-icons.png)white;
+  background: url(../bower_components/jsoneditor/dist/img/jsoneditor-icons.png) white;
   border-color: dimgray;
 }
 
